2007-01-30  John Peacock <jpeacock@cpan.org>

	Bump $VERSION's and update README for another dev release [0.69_02]

2007-01-30  John Peacock <jpeacock@cpan.org>

	XS UNIVERSAL::VERSION code now emits error messages just like the release of
	Perl it is compiled against.

2007-01-30  John Peacock <jpeacock@cpan.org>

	Need to limit the effects of the WARN handler.
	Stop testing v-strings in Perl 5.6.x until XS code is up to snuff.

2007-01-30  John Peacock <jpeacock@cpan.org>

	Complete rewrite of tests to confirm that version::vpp mirrors the
	different Perl releases' error messages.

2007-01-30  John Peacock <jpeacock@cpan.org>

	Carefully replicate [almost] all error messages exactly as different Perl
	releases would otherwise report.  Resolves RT#24675 (once the tests are
	adjusted).

2007-01-27  John Peacock <jpeacock@cpan.org>

	Improve documentation of v-strings as version initializers.

2007-01-27  John Peacock <jpeacock@cpan.org>

	Testing with Module::Build revealed problems with the boolean overload.

2007-01-27  John Peacock <jpeacock@cpan.org>

	Fix Makefile.PL to work correctly with 5.6.x and 5.005x.
	Tests with bare v-strings can now handle 5.6.x releases.
	Pure Perl release now includes same overloading as XS.

2007-01-10  John Peacock <jpeacock@cpan.org>

	Rewrite Makefile.PL again before releasing 0.69 to CPAN.

2007-01-09  John Peacock <jpeacock@cpan.org>

	Before releasing to CPAN, make sure to remove stale Makefile.* remnants
	from previous runs (in case someone tries to rebuild with the pure Perl
	release after building the XS release).

2007-01-08  John Peacock <jpeacock@cpan.org>

	Release 0.69 to CPAN

2007-01-08  John Peacock <jpeacock@cpan.org>

	Try to make the Makefile.PL more forgiving about evil compilers (RT#24283).
	Eliminate Scalar::Util from pure Perl version (for Jos <kane@xs4all.nl>).
	Latest ppport.h (newer is better, right?).
	Resolve RT#24239 and 24244, related to PERL_DONT_CREATE_GVSV.
