@@ -64,6 +64,11 @@ sub write_makefile
 sub init
 {
     my $hash = $_[1];
+    if ( $] >= 5.009001 ) { # included in bleadperl
+	$hash->{'PM'} = {};
+	$hash->{'MAN3PODS'} = {};
+	return $hash;
+    }
 
     if ($no_xs) {
         $hash->{'PM'}->{'vperl/vpp.pm'} = '$(INST_LIBDIR)/version/vpp.pm';
@@ -77,7 +82,7 @@ sub init
         @{ $hash }{ 'DIR' } = ['vutil'];
     }
 
-    $hash;
+    return $hash;
 }
 
 sub no_cc
