@@ -1,4 +1,4 @@
-version 0.69_02
+version 0.69_03
 ==================================
 
 Provides the same version objects as included in Perl v5.9.x (and hopefully in
@@ -15,7 +15,7 @@ Major changes in 0.70 - NOT YET
 
 Rewrite Makefile.PL again to make it run successfully with 5.005 and 5.6.x.
 Rewrite UNIVERSAL::VERSION error code to more closely echo what Perl itself
-outputs.  
+outputs.  Don't install anything (just run tests) with bleadperl or better.
 
 Major changes in 0.69 - 2007-01-10
 =====================================
